--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   </head>
   <body>
     <a-scene embedded arjs>
-      <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+  <a-marker preset="hiro">
+    <a-entity gltf-model="url(seu-modelo.glb)"
+              scale="0.5 0.5 0.5"
+              position="0 0 0">
+    </a-entity>
+  </a-marker>
+  <a-entity camera></a-entity>
+</a-scene>
+   </body>
 </html>
