--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene embedded arjs>
   <a-marker preset="hiro">
-    <a-entity gltf-model="url(seu-modelo.glb)"
+    <a-entity gltf-model="url(Cell.glb)"
               scale="0.01 0.01 0.01"
               position="0 0 0">
     </a-entity>
